fix white space in banner

--- a/_assets/css/pages/_projects.scss
+++ b/_assets/css/pages/_projects.scss
@@ -73,6 +73,15 @@
             }
         }
     }
+    @media (min-width: 1024px) {
+      .usa-hero {
+        height: 100px;
+      }
+      .usa-hero__heading{
+        margin-top: 35px;
+      }
+    }
+    
 }
 
 
